<resources>
    <string name="app_name">ป้ายจราจรน่ารู้</string>
    <string name="my_name">นายวทัญญู อ่วมเมี่ยง</string>
    <string name="app_major">หลักสูตรวิทยาการคอมพิวเตอร์</string>
    <string name="app_university">มหาวิทยาลัยสวนดุสิต</string>
    <string name="app_mobile">Mobile no.:0991201075</string>
    <string name="app_facebook">facebook:https://www.facebook.com/yo.ouammiang</string>
</resources>
